fixed dark mode not applying in css module file

--- a/src/components/Tag/Tag.module.css
+++ b/src/components/Tag/Tag.module.css
@@ -1,7 +1,7 @@
 .container {
-  @apply bg-gray-300 rounded-2xl border w-24;
+  @apply bg-gray-300 rounded-2xl border w-24  dark:border-gray-600 dark:bg-gray-600;
 }
 
 .title {
-  @apply font-light px-3 py-0.5 text-slate-900 truncate cursor-pointer;
+  @apply font-light px-3 py-0.5 text-slate-900 truncate cursor-pointer dark:text-slate-50;
 }
